--- a/src/ui/app.css
+++ b/src/ui/app.css
@@ -1,7 +1,10 @@
 body {
     background-image: url('../img/paquete.png');
+    
 }
+
 h1{
+    margin-top: 50px;
     text-align: center;
     font-size: 50px;
 }
@@ -22,6 +25,7 @@ h1:hover{
 
 #bloque{
     margin-left: 40%;
+   
 }
 
 form #name, form #price{
@@ -46,6 +50,7 @@ form button{
 li div button{
     width: 70px;
     height: 30px;
+    border-radius: 6px;
     background: linear-gradient(0.25turn, #f3736f, #8478f3);
 }
 li div input{
@@ -53,18 +58,39 @@ li div input{
     height: 24px;
 }
 
-
-#sum{
+.menu-fixed{
+    width: 100%;
+    
     position: fixed;
     z-index: 1000;
     top: 0;
-    background-color: #cacaca;
+    
+}
+#botones{
+    text-align: center;
+    height: 34px;
+}
+
+#botones button{
+    height: 35px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0
+}
+
+#sum{
+    background-color: #dfdfdf;
     color: red;
     width: auto; 
     height: auto; 
     border: 3px solid black;
     font-size: 30px;
     font-weight: 700;
+
+    position: fixed;
+    z-index: 1000;
+    top: 36px;
 }
 #sum #texto{
     color: black;
