--- a/src/ui/app.css
+++ b/src/ui/app.css
@@ -3,6 +3,10 @@ body {
     
 }
 
+#logo{
+    margin-top: 50px;
+}
+
 h1{
     margin-top: 50px;
     text-align: center;
@@ -33,8 +37,12 @@ form #name, form #price{
     height: 25px;
 }
 form #menu{
-    width: 263px;
+    width: 255px;
     height: 25px;
+}
+form #description{
+    width: 255px;
+    height: 100px;
 }
 
 form button{
@@ -95,10 +103,6 @@ li div input{
 #sum #texto{
     color: black;
    
-}
-
-#enviar{
-    margin: 0;
 }
 
 hr{
