--- a/src/ui/ventas.css
+++ b/src/ui/ventas.css
@@ -1,20 +1,79 @@
 body {
-    background-color: rgb(247, 144, 144);
+background-color: rgb(219, 219, 219);
+}
 
+h1{
+    color: rgb(0, 0, 0);
+    font-size: 20px;
 }
 
 #ventas {
-    border: 1px solid black;
     width: 100%;
+    color: rgb(0, 0, 0);
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;  
+
 }
 
-#container {
-    border: 2px solid red;
+#dia {
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+    text-align: center;
     border-radius: 10px;
-    width: 30%;
-    margin: 10px;
+    box-shadow: 4px 4px 10px rgb(56, 56, 56);
     
+}
+
+h3{
+    color: rgb(0, 0, 0);
+    text-align: center;
+    text-transform: uppercase;
+    margin: 15px;
+    font-weight: bold;
+    font-size: 22px;
+    border-bottom: 2px solid rgb(104, 104, 104);
+}
+span{
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+}
+
+p {
+    color: rgb(0, 0, 0);
+    font-size: 17px;
+    width: 45%;
+    display: inline;
+    border-bottom:2px solid black;
+}
+
+#datesearch{
+    margin-right: 20px;
+    border-radius: 5px;
+    border: 0.5px solid;
+    box-shadow: 4px 4px 10px rgb(252, 250, 250);
+    background-color: rgb(255, 255, 255);
+    color: rgb(8, 8, 8);
+}
+
+#buttonsearch{
+    border-radius: 5px;
+    border: 0.5px solid black;
+    box-shadow: 4px 4px 10px rgb(151, 151, 151);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0)
+}
+
+#fecha {
+    font-size: 14px;
+}
+#container {
+    background-color: rgb(255, 255, 255);
+    box-shadow: 4px 4px 3px rgb(102, 102, 102);
+    border-radius: 5px;
+    width: 15%;
+    padding: 5px;
+    margin: 8px;   
+    list-style-type: none;
 }
